fix: update line height and alignment

--- a/src/components/Checkbox/Checkbox.module.css
+++ b/src/components/Checkbox/Checkbox.module.css
@@ -23,13 +23,8 @@
   line-height: 2;
 
   @media (--viewport-sm-only) {
-    margin: 2px 0 0 0;
-    font-size: rem(12px);
-    line-height: 1.33;
-  }
-  @media (--viewport-md-only) {
     margin: 6px 0 0 0;
-    line-height: 1.79;
+    font-size: rem(12px);
   }
 
   &.dark {
@@ -44,13 +39,13 @@
 
   &:checked::before {
     position: relative;
-    top: -8px;
+    top: -7px;
     content: '\2713'; /* Glyph: ✓ (check mark) */
     @media (--viewport-sm-only) {
-      top: -2px;
+      top: -6px;
     }
     @media (--viewport-md-only) {
-      top: -8px;
+      top: -7px;
     }
   }
 
@@ -77,9 +72,5 @@
 
   @media (--viewport-sm-only) {
     font-size: rem(12px);
-    line-height: 1.33;
-  }
-  @media (--viewport-md-only) {
-    line-height: 1.79;
   }
 }
